Fix broken styles.
Bottom border should still be there for <a> in overview.html.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,13 +38,13 @@ body {
 }
 
 a:hover {
-  border-bottom: 1px dotted #D23153;
+  /*border-bottom: 1px dotted #D23153;*/
   color: #D23153;
   text-decoration: none;
 }
 
 a {
-  border-bottom: 1px dotted #A30046;
+  /*border-bottom: 1px dotted #A30046;*/
   color: #A30046;
   text-decoration: none;
 }
@@ -111,6 +111,10 @@ h1 > .glyphicon-menu-right {
                                       Overview Page
  ------------------------------------------------------------------------------------------
  */
+h4 > a {
+    border-bottom: 1px dotted #A30046;
+}
+
 .vert-panels {
   /*margin: 15px 15px 0 0;*/
   /*position: absolute;*/
@@ -140,12 +144,14 @@ h1 > .glyphicon-menu-right {
   margin: 0 0.5% 5px 0.5%;
   padding: 15px;
   z-index: 100;
+}
 
 /*
  ------------------------------------------------------------------------------------------
                                       Sidebar and Content
  ------------------------------------------------------------------------------------------
  */
+
 #mainview {
     padding-left: 0px;
     transition: all 0.5s ease;
